Fix menu on mobile

--- a/priv/lib-src/_components.nav.scss
+++ b/priv/lib-src/_components.nav.scss
@@ -12,7 +12,7 @@
     @supports (color: light-dark(black, white)) {
         background: light-dark(var(--theme), var(--lightTheme));
     }
-    
+
     border-bottom: 3px solid var(--darkTheme);
     text-transform: uppercase;
     font-size: 0.9em;
@@ -49,7 +49,12 @@
 }
 
 .c-main-nav__logo {
+    display: none;
     margin-right: auto;
+
+    @include breakpoint(600px) {
+        display: block;
+    }
 }
 
 body.color--flagBlack,
